# clear-harbor-tauri

./: index.html  package.json  pnpm-lock.yaml
docs/plans/: 2026-02-20-dualscribe-design.md  2026-02-20-dualscribe-implementation.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  export.rs  lib.rs  settings.rs
src-tauri/src/audio/: mic_capture.rs  mod.rs  resampler.rs  system_capture.rs  system_linux.rs  system_macos.rs  system_windows.rs
src-tauri/src/transcription/: deepgram_client.rs  mod.rs  stream_manager.rs  types.rs
src/components/: AudioLevelMeter.tsx  ControlBar.tsx  DeviceBar.tsx  SettingsDialog.tsx  StatusIndicator.tsx  TranscriptPanel.tsx  TranscriptSegment.tsx  TranscriptView.tsx
src/hooks/: useAudioDevices.ts  useAutoScroll.ts  useSettings.ts  useTranscription.ts
src/lib/: tauri-commands.ts  types.ts
